@@ -1,3 +1,11 @@
+2007-08-20  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/gp_cairo.c (gp_cairo_draw_polygon,
+	gp_cairo_end_polygon): Introduce a small piece of code, unused, but
+	illustrative of the way the "saturate" operator is used to draw pm3d
+	polygons without seams.
+	
+
 2007-08-18  Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* src/save.c (save_range):  The output of "show <foo>range" lists the
